<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">DoctorFinder</string>
    <string name="diaplayads" translatable="false">yes</string>
    <string name="adMobId" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="adMobBanner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adMobInterstial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="link" translatable="false"> https://doc.softmekdev.xyz/Apicontrollers/</string>
    <string name="link1" translatable="false"> https://doc.softmekdev.xyz/</string>
    <string name="text1">Find nearest Doctor</string>
    <string name="tetx2">&amp; Book Appointment by this app</string>
    <string name="txt_doctor">Search Doctors by their speciality or by city or near by you. You can find best doctors just one click away.</string>
    <string name="txt_pharmacies">Search Medicines dispencaries here. You can find by city or near by you or just by using name.</string>
    <string name="txt_hospitals">Search Hospitals by city or near by you or just by using hospital name. You can find best Hospitals just one click away.</string>
    <string name="loading" tools:ignore="MissingTranslation">loading..</string>
    <string name="nearby" translatable="false">Near By (Location)</string>
    <string name="city" translatable="false">City</string>
    <string name="alphabetic" translatable="false">alphabetic</string>
    <string name="doctor">DOCTORS</string>
    <string name="pharmany">PHARMACIES</string>
    <string name="hospital">HOSPITALS</string>
    <string name="doctor_symbol" translatable="false">D</string>
    <string name="pharmacy_symbol" translatable="false">P</string>
    <string name="hospital_symbol" translatable="false">H</string>
    <string name="distance">DISTANCE</string>
    <string name="rating" tools:ignore="MissingTranslation">RATINGS</string>
    <string name="distance_miles" translatable="false">mi</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="facebook_app_id" translatable="false">336936243379790</string>
    <string name="fb_login_protocol_scheme" tools:ignore="MissingTranslation">fb336936243379790</string>
    <string name="setting" tools:ignore="MissingTranslation">Settings</string>
    <string name="radius" tools:ignore="MissingTranslation">Radius</string>
    <string name="orderby" tools:ignore="MissingTranslation">Order By</string>
    <string name="currentlocation" tools:ignore="MissingTranslation">Current Location</string>
    <string name="orderby_accending" tools:ignore="MissingTranslation">Order By Acending</string>
    <string name="orderby_decending" tools:ignore="MissingTranslation">Order By decending</string>
    <string name="Km" tools:ignore="MissingTranslation">Km</string>
    <string name="aboutparagraph1" tools:ignore="MissingTranslation">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</string>
    <string name="aboutparagraph2" tools:ignore="MissingTranslation">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</string>
    <string name="aboutparagraph3" tools:ignore="MissingTranslation">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "</string>
    <string name="aboutparagraph4" tools:ignore="MissingTranslation">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="aboutparagraph5" tools:ignore="MissingTranslation">Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
    <string name="profile" tools:ignore="MissingTranslation">Profile</string>
    <string name="book_appointment" tools:ignore="MissingTranslation">Pay To Book Appointment</string>
    <string name="drawer_open" tools:ignore="MissingTranslation">open</string>
    <string name="drawer_close" tools:ignore="MissingTranslation">close</string>
    <string name="error_config" tools:ignore="MissingTranslation">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered" tools:ignore="MissingTranslation">Device is already registered on server.</string>
    <string name="gcm_registered" tools:ignore="MissingTranslation">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered" tools:ignore="MissingTranslation">From GCM: device successfully unregistered!</string>
    <string name="gcm_message" translatable="false">From GCM: you got message!</string>
    <string name="gcm_error" tools:ignore="MissingTranslation">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error" tools:ignore="MissingTranslation">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted" tools:ignore="MissingTranslation">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering" translatable="false">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered" translatable="false">From Demo Server: successfully added device!</string>
    <string name="server_unregistered" translatable="false">From Demo Server: successfully removed device!</string>
    <string name="server_register_error" translatable="false">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error" translatable="false">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register" tools:ignore="MissingTranslation">Register</string>
    <string name="options_unregister" tools:ignore="MissingTranslation">Unregister</string>
    <string name="options_clear" tools:ignore="MissingTranslation">Clear</string>
    <string name="options_exit" tools:ignore="MissingTranslation">Exit</string>
    <string name="apointment" tools:ignore="MissingTranslation">Appointment</string>
    <string name="errormsg" tools:ignore="MissingTranslation">Sorry! No Data Found! Please Try Later!</string>
    <string name="errormessage" tools:ignore="MissingTranslation">Sorry, We could not find any data, Please try again..</string>
    <string name="errorconfirm" tools:ignore="MissingTranslation">Close</string>
    <string name="button_yes" tools:ignore="MissingTranslation">Yes</string>
    <string name="button_no" tools:ignore="MissingTranslation">No</string>
    <string name="bookalert" tools:ignore="MissingTranslation">To book appointment login is required, Would you like to login now ?</string>
    <string name="orderalert" tools:ignore="MissingTranslation">To order medicine you need to login first, Would you like to login now ?</string>
    <string name="internet_message" tools:ignore="MissingTranslation">No internet connection!</string>
    <string name="login_message" tools:ignore="MissingTranslation">Signed in successfully.</string>
    <string name="success_title" tools:ignore="MissingTranslation">Success</string>
    <string name="logout_message" tools:ignore="MissingTranslation">Are you sure you want to logout ?</string>
    <string name="logout_title" tools:ignore="MissingTranslation">Logout</string>
    <string name="doctor_mail_subject" tools:ignore="MissingTranslation">Doctor Inquiries</string>
    <string name="pharmacy_mail_subject" tools:ignore="MissingTranslation">Pharmacy Inquiries</string>
    <string name="hospital_mail_subject" tools:ignore="MissingTranslation">Hospital Inquiries</string>
    <string name="recipenotes" tools:ignore="MissingTranslation">Notes:</string>
    <string name="recipenotes1" tools:ignore="MissingTranslation">1. Appointment time may change if already allotted.</string>
    <string name="recipenotes2" tools:ignore="MissingTranslation">2. This form is to request appointment, if your appointment confirmed you will get mail from doctor.</string>
    <string name="recipenotes3" tools:ignore="MissingTranslation">3. For Emergency direct visit is advisable.</string>
    <string name="booknotes" tools:ignore="MissingTranslation">Notes:</string>
    <string name="booknotes1" tools:ignore="MissingTranslation">1. Appointment time may change if already allotted.</string>
    <string name="booknotes2" tools:ignore="MissingTranslation">2. This form is to request appointment, if your appointment confirmed you will get mail from doctor.</string>
    <string name="booknotes3" tools:ignore="MissingTranslation">3. For Emergency direct visit is advisable.</string>
    <string name="orderingmedicine" tools:ignore="MissingTranslation">Hello, Here i m ordering medicine, prescription is attached below.</string>
    <string name="reviewerror" tools:ignore="MissingTranslation">To give review,you need to login first,Would you like to login now?</string>
    <string name="sharemessage" tools:ignore="MissingTranslation">Now find best doctors is very easy, you can search doctor, pharmacy or hospitals very easily, check out this app to search doctors, pharmacy or hospitals.</string>
    <string name="slidetitle1" tools:ignore="MissingTranslation">Find out best doctors</string>
    <string name="slidetitle2" tools:ignore="MissingTranslation">Now finding best doctors is very easy, you can search nearby doctor or sort by rating or service or speciality.</string>
    <string name="slidetitle3" tools:ignore="MissingTranslation">You can also book appointment or contact doctors directly.</string>
    <string name="pharmacytittle1" tools:ignore="MissingTranslation">Find Nearby Pharmacy</string>
    <string name="pharmacytittle2" tools:ignore="MissingTranslation">You can search pharmacy near you, by using sorting function by city or map its very easy to find pharmacy stores</string>
    <string name="pharmacytittle3" tools:ignore="MissingTranslation">You can upload prescription to pharmacy and get medicine at home</string>
    <string name="hospitaltittle1" tools:ignore="MissingTranslation">Find Nearby Hospitals</string>
    <string name="hospitaltittle2" tools:ignore="MissingTranslation">You can search hospitals near you, by using sorting function by city or map its very easy to find Hospitals</string>
    <string name="hospitaltittle3" tools:ignore="MissingTranslation">You can check what facilities are available at hospital and contact them.</string>
    <string name="aph1" tools:ignore="MissingTranslation">I would like to book a appointment and following is the detail for my request,</string>
    <string name="todo" tools:ignore="MissingTranslation">TODO</string>
    <string name="about_us_txt" tools:ignore="MissingTranslation">About Us</string>
    <string name="favorites_txt" tools:ignore="MissingTranslation">Favorites</string>
    <string name="profile_txt" tools:ignore="MissingTranslation">Profile</string>
    <string name="sign_in_txt" tools:ignore="MissingTranslation">Sign In</string>
    <string name="home_txt" translatable="false">Home</string>
    <string name="social_sharing_txt" tools:ignore="MissingTranslation">Social Sharing</string>
    <string name="settings_txt" tools:ignore="MissingTranslation">Settings</string>
    <string name="login_txt" tools:ignore="MissingTranslation">LOGIN</string>
    <string name="password_txt" tools:ignore="MissingTranslation">Password</string>
    <string name="username_txt" tools:ignore="MissingTranslation">Username</string>
    <string name="create_new_one_txt" tools:ignore="MissingTranslation">Create new one</string>
    <string name="dont_have_account_txt" tools:ignore="MissingTranslation">Don\'t have a account?</string>
    <string name="sign_in_with_facebook" tools:ignore="MissingTranslation">Sign in with facebook</string>
    <string name="error_txt" tools:ignore="MissingTranslation">ERROR</string>
</resources>